[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/cloud/lb.png" type="Texture" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/cloud/staticserver.png" type="Texture" id=3]
[ext_resource path="res://assets/cloud/dynamicserver.png" type="Texture" id=4]
[ext_resource path="res://assets/cloud/database.png" type="Texture" id=5]
[ext_resource path="res://GameOver.gd" type="Script" id=6]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=7]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://monospace_dynamic_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/cloud/firewall.png" type="Texture" id=10]
[ext_resource path="res://assets/cloud/platformIndustrial_082.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=1]
hinting = 1
font_path = "res://assets/fonts/SourceCodePro-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.231373, 0.258824, 0.670588 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0823529, 0.494118, 0.156863, 0.709804 )
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Theme" id=10]
default_font = ExtResource( 9 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 9 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.0980392, 0.368627, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 17 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[node name="HUD" type="Node2D"]
pause_mode = 2
z_as_relative = false
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 592.0, 616.0, 640.0, 568.0, 544.0, 664.0, 688.0, 520.0 ],
"_edit_vertical_guides_": [ 1208.0, 1312.0, 1200.0, 1200.0 ]
}

[node name="Panel" type="Panel" parent="."]
margin_top = 760.0
margin_right = 1200.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNS" type="LineEdit" parent="Panel"]
margin_left = 1090.0
margin_top = 7.0
margin_right = 1190.0
margin_bottom = 33.0
rect_clip_content = true
hint_tooltip = "Entrypoint"
theme = SubResource( 3 )
max_length = 12
placeholder_text = "<server_ip>"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNSLabel" type="Label" parent="Panel"]
margin_left = 997.0
margin_top = 13.0
margin_right = 1086.0
margin_bottom = 27.0
text = "DNS A record:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_LoadBalancer" type="Button" parent="Panel"]
anchor_left = 0.00285492
anchor_top = -0.637859
anchor_right = 0.00285492
anchor_bottom = -0.224
margin_left = 88.946
margin_top = 25.5143
margin_right = 128.946
margin_bottom = 48.96
hint_tooltip = "new load balancer"
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "LoadBalancer"
}

[node name="new_Database" type="Button" parent="Panel"]
anchor_left = 0.0979253
anchor_top = -0.637859
anchor_right = 0.0979253
anchor_bottom = -0.0988586
margin_left = 16.946
margin_top = 25.5143
margin_right = 56.946
margin_bottom = 43.9543
hint_tooltip = "Database"
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Database"
}

[node name="new_Firewall" type="Button" parent="Panel"]
anchor_left = 0.0979253
anchor_top = -0.637859
anchor_right = 0.0979253
anchor_bottom = -0.0988586
margin_left = 58.946
margin_top = 25.5143
margin_right = 98.946
margin_bottom = 43.9543
hint_tooltip = "Firewall"
icon = ExtResource( 10 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Firewall"
}

[node name="new_DynamicServer" type="Button" parent="Panel"]
anchor_left = 0.0267986
anchor_top = -0.637859
anchor_right = 0.0267986
anchor_bottom = -0.0988586
margin_left = 17.946
margin_top = 25.5143
margin_right = 57.946
margin_bottom = 43.9543
hint_tooltip = "Dynamic Server
"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "DynamicServer"
}

[node name="new_StaticServer" type="Button" parent="Panel"]
material = SubResource( 4 )
anchor_top = -0.614
anchor_bottom = -0.024
margin_left = 8.0
margin_top = 24.56
margin_right = 48.0
margin_bottom = 40.96
hint_tooltip = "Static Server"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "StaticServer"
}

[node name="ToolTip" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.811765 )
margin_left = 8.0
margin_top = 595.0
margin_right = 256.0
margin_bottom = 747.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBox" type="VBoxContainer" parent="ToolTip"]
margin_left = 8.0
margin_top = 13.0
margin_right = 232.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ToolTip/InfoBox"]
margin_right = 224.0
margin_bottom = 14.0
text = "Server"

[node name="MarginContainer" type="MarginContainer" parent="ToolTip/InfoBox"]
margin_top = 18.0
margin_right = 224.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="ToolTip/InfoBox"]
margin_top = 22.0
margin_right = 224.0
margin_bottom = 87.0
rect_min_size = Vector2( 200, 50 )
text = "description
description
desc
desc"
autowrap = true

[node name="GridContainer" type="GridContainer" parent="ToolTip/InfoBox"]
margin_top = 91.0
margin_right = 224.0
margin_bottom = 123.0
grow_vertical = 0
columns = 2

[node name="CostLabel" type="Label" parent="ToolTip/InfoBox/GridContainer"]
margin_right = 133.0
margin_bottom = 14.0
text = "Cost"

[node name="Cost" type="Label" parent="ToolTip/InfoBox/GridContainer"]
margin_left = 137.0
margin_right = 145.0
margin_bottom = 14.0
text = "0"

[node name="RevLabel" type="Label" parent="ToolTip/InfoBox/GridContainer"]
margin_top = 18.0
margin_right = 133.0
margin_bottom = 32.0
text = "Revenue per request"

[node name="Revenue" type="Label" parent="ToolTip/InfoBox/GridContainer"]
margin_left = 137.0
margin_top = 18.0
margin_right = 145.0
margin_bottom = 32.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="AcceptDialog" parent="."]
pause_mode = 2
visible = true
margin_left = 536.0
margin_top = 336.0
margin_right = 728.0
margin_bottom = 412.0
popup_exclusive = true
window_title = "Game Over!"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameOver/VBoxContainer"]
margin_right = 176.0
margin_bottom = 14.0
text = "Score:"
align = 1

[node name="Score" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 18.0
margin_right = 176.0
margin_bottom = 32.0
text = "60"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthControl" type="Panel" parent="."]
margin_left = 239.0
margin_top = 760.0
margin_right = 496.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoAdvance" type="CheckBox" parent="MonthControl"]
margin_left = 144.0
margin_top = 8.0
margin_right = 202.0
margin_bottom = 32.0
hint_tooltip = "Auto advance on/off"
text = "Auto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_Wave" type="Button" parent="MonthControl"]
margin_left = 114.0
margin_top = 8.0
margin_right = 138.0
margin_bottom = 32.0
hint_tooltip = "Next Month"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontAwesome" type="Label" parent="MonthControl/new_Wave"]
margin_right = 24.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
text = "ÔÅã"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 10
icon_name = "play"

[node name="MonthProgress" type="ProgressBar" parent="MonthControl"]
margin_left = 4.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 32.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 30.0
value = 15.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthLabel" type="Label" parent="MonthControl/MonthProgress"]
margin_left = 8.0
margin_top = 6.0
margin_right = 55.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Month:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Month" type="Label" parent="MonthControl/MonthProgress"]
margin_left = 53.0
margin_top = 6.0
margin_right = 85.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="Node2D" parent="."]

[node name="List" type="ItemList" parent="Messages"]
margin_left = 1008.0
margin_top = 35.0
margin_right = 1184.0
margin_bottom = 152.0
grow_horizontal = 0
rect_min_size = Vector2( 168, 40 )
size_flags_horizontal = 0
size_flags_vertical = 10
theme = SubResource( 10 )
custom_styles/cursor = SubResource( 11 )
custom_styles/selected_focus = SubResource( 12 )
custom_styles/bg_focus = SubResource( 13 )
custom_styles/cursor_unfocused = SubResource( 14 )
custom_styles/selected = SubResource( 15 )
custom_styles/bg = SubResource( 16 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
max_text_lines = 500
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinancesToggle" type="Button" parent="."]
margin_left = 566.0
margin_right = 650.0
margin_bottom = 26.0
theme = SubResource( 18 )
toggle_mode = true
pressed = true
text = "300"
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinancesPanel" type="Panel" parent="."]
margin_left = 382.0
margin_top = 32.0
margin_right = 838.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalBalanceLabel" type="Label" parent="FinancesPanel"]
margin_left = 392.0
margin_top = 24.0
margin_right = 448.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Balance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalBalance" type="Label" parent="FinancesPanel"]
margin_left = 392.0
margin_top = 40.0
margin_right = 464.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductCostLabel" type="Label" parent="FinancesPanel"]
margin_left = 16.0
margin_top = 26.0
margin_right = 98.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Product Cost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductCost" type="Label" parent="FinancesPanel"]
margin_left = 16.0
margin_top = 40.0
margin_right = 72.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerCostsLabel" type="Label" parent="FinancesPanel"]
margin_left = 113.0
margin_top = 25.0
margin_right = 196.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Server Costs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerCosts" type="Label" parent="FinancesPanel"]
margin_left = 112.0
margin_top = 41.0
margin_right = 184.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthlyIncomeLabel" type="Label" parent="FinancesPanel"]
margin_left = 213.0
margin_top = 24.0
margin_right = 266.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Income"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthlyIncome" type="Label" parent="FinancesPanel"]
margin_left = 214.0
margin_top = 40.0
margin_right = 286.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfitLabel" type="Label" parent="FinancesPanel"]
margin_left = 304.0
margin_top = 24.0
margin_right = 370.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 74, 10.9999 )
text = "Net Profit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profit" type="Label" parent="FinancesPanel"]
margin_left = 304.0
margin_top = 40.0
margin_right = 376.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 18, 10.9999 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="FinancesPanel"]
margin_left = 381.0
margin_right = 385.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="FinancesPanel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 22.0
text = "Monthly"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="FinancesPanel"]
margin_left = 392.0
margin_top = 8.0
margin_right = 444.0
margin_bottom = 22.0
text = "Total"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogsToggle" type="Button" parent="."]
margin_left = 1173.0
margin_top = 453.0
margin_right = 1263.0
margin_bottom = 473.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 26.5, 0 )
toggle_mode = true
pressed = true
text = "Access Logs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logs" type="Control" parent="."]
margin_left = 896.0
margin_top = 160.0
margin_right = 1179.0
margin_bottom = 656.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Logs"]
show_behind_parent = true
margin_left = 5.0
margin_top = 472.0
margin_right = 280.0
margin_bottom = 496.0
grow_vertical = 0
custom_styles/selected = SubResource( 20 )
custom_styles/bg = SubResource( 21 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
auto_height = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanelToggle" type="Button" parent="."]
margin_left = 1172.0
margin_top = 692.0
margin_right = 1225.0
margin_bottom = 712.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 26.5, 0 )
toggle_mode = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 960.0
margin_top = 664.0
margin_right = 1168.0
margin_bottom = 744.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearUsers" type="Button" parent="DebugPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 88.0
margin_bottom = 26.0
text = "clear users"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="Button" parent="DebugPanel"]
margin_left = 2.0
margin_top = 32.0
margin_right = 98.0
margin_bottom = 52.0
text = "send request"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hacker" type="Button" parent="DebugPanel"]
margin_left = 106.0
margin_top = 32.0
margin_right = 195.0
margin_bottom = 52.0
text = "send hacker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money1000" type="Button" parent="DebugPanel"]
margin_left = 8.0
margin_top = 56.0
margin_right = 116.0
margin_bottom = 76.0
text = "money +=1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="DebugPanel"]
margin_left = 122.0
margin_top = 8.0
margin_right = 176.0
margin_bottom = 28.0
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Panel/DNS" to="." method="_on_DNS_text_changed"]
[connection signal="mouse_entered" from="Panel/new_LoadBalancer" to="." method="_on_panel_button_mouse_entered" binds= [ "LoadBalancer" ]]
[connection signal="mouse_exited" from="Panel/new_LoadBalancer" to="." method="_on_panel_button_mouse_exited"]
[connection signal="pressed" from="Panel/new_LoadBalancer" to="." method="_on_panel_button_pressed" binds= [ "LoadBalancer" ]]
[connection signal="mouse_entered" from="Panel/new_Database" to="." method="_on_panel_button_mouse_entered" binds= [ "Database" ]]
[connection signal="mouse_exited" from="Panel/new_Database" to="." method="_on_panel_button_mouse_exited"]
[connection signal="pressed" from="Panel/new_Database" to="." method="_on_panel_button_pressed" binds= [ "Database" ]]
[connection signal="mouse_entered" from="Panel/new_Firewall" to="." method="_on_panel_button_mouse_entered" binds= [ "Firewall" ]]
[connection signal="mouse_exited" from="Panel/new_Firewall" to="." method="_on_panel_button_mouse_exited"]
[connection signal="pressed" from="Panel/new_Firewall" to="." method="_on_panel_button_pressed" binds= [ "Firewall" ]]
[connection signal="mouse_entered" from="Panel/new_DynamicServer" to="." method="_on_panel_button_mouse_entered" binds= [ "DynamicServer" ]]
[connection signal="mouse_exited" from="Panel/new_DynamicServer" to="." method="_on_panel_button_mouse_exited"]
[connection signal="pressed" from="Panel/new_DynamicServer" to="." method="_on_panel_button_pressed" binds= [ "DynamicServer" ]]
[connection signal="mouse_entered" from="Panel/new_StaticServer" to="." method="_on_panel_button_mouse_entered" binds= [ "StaticServer" ]]
[connection signal="mouse_exited" from="Panel/new_StaticServer" to="." method="_on_panel_button_mouse_exited"]
[connection signal="pressed" from="Panel/new_StaticServer" to="." method="_on_panel_button_pressed" binds= [ "StaticServer" ]]
[connection signal="confirmed" from="GameOver" to="." method="_on_GameOver_confirmed"]
[connection signal="pressed" from="MonthControl/AutoAdvance" to="." method="_on_AutoAdvance_pressed"]
[connection signal="pressed" from="MonthControl/new_Wave" to="." method="_on_month_pressed"]
[connection signal="toggled" from="FinancesToggle" to="." method="_toggle_view" binds= [ "FinancesPanel" ]]
[connection signal="toggled" from="LogsToggle" to="." method="_toggle_view" binds= [ "Logs" ]]
[connection signal="toggled" from="DebugPanelToggle" to="." method="_toggle_view" binds= [ "DebugPanel" ]]
[connection signal="pressed" from="DebugPanel/ClearUsers" to="." method="_on_ClearUsers_pressed"]
[connection signal="pressed" from="DebugPanel/Request" to="." method="_on_Request_pressed"]
[connection signal="pressed" from="DebugPanel/Hacker" to="." method="_on_Request_pressed" binds= [ true ]]
[connection signal="pressed" from="DebugPanel/Money1000" to="." method="_on_Money1000_pressed"]
[connection signal="pressed" from="DebugPanel/Restart" to="." method="_on_restart_pressed"]
